--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: flutter-actions/setup-flutter@v2
+      - name: Setup Flutter SDK
+        uses: flutter-actions/setup-flutter@v2
         with:
-          version: '3.0.2'
-          channel: 'stable'
+          channel: stable
+          version: 3.3.0
 
       - name: Install dependencies
         run: flutter pub get
