change sdk min version to 2.19.3

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: reduced_solidart
-description: reduced for solidart.
 version: 0.1.0
-homepage:
+description: Implementation of the state management API 'reduced' on top of the state management framework 'Solidart'.
+homepage: https://github.com/partmaster/reduced_solidart
+repository: https://github.com/partmaster/reduced_solidart.git
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.19.3 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
