--- a/example/counter_app/pubspec.yaml
+++ b/example/counter_app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: counter_app
 description: Example app for reduced_solidart.
 publish_to: 'none' 
-version: 0.3.0+3
+version: 0.3.2+4
 
 environment:
   sdk: '>=2.19.3 <3.0.0'
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#  reduced: 0.3.0
-  reduced: 
-    git:
-      url: https://github.com/partmaster/reduced.git
-      ref: v0.3.0
+  reduced: 0.3.2
+#  reduced: 
+#    git:
+#      url: https://github.com/partmaster/reduced.git
+#      ref: v0.3.0
   reduced_solidart: 
     path: ../../
 
