--- a/example/counter_app_with_selective_rebuild/pubspec.yaml
+++ b/example/counter_app_with_selective_rebuild/pubspec.yaml
@@ -1,7 +1,7 @@
 name: counter_app_with_selective_rebuild
 description: Counter demo app with selective rebuild implemented with 'reduced' API and 'reduced_solidart' implementation as an example of how to use the 'reduced_solidart' package.
 publish_to: 'none' 
-version: 0.4.0+5
+version: 0.4.1+6
 
 environment:
   sdk: '>=2.19.3 <3.0.0'
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  reduced: 0.4.0
-#  reduced: 
-#    git:
-#      url: https://github.com/partmaster/reduced.git
-#      ref: v0.4.0
+#  reduced: 0.4.1
+  reduced: 
+    git:
+      url: https://github.com/partmaster/reduced.git
+      ref: v0.4.1-beta.4
   reduced_solidart: 
     path: ../../
 
